[tool.poetry]
name = "bustime-api"
version = "0.1.0"
description = ""
authors = ["Halimon-Alexandr <154706310+Halimon-Alexandr@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
